Getting more skeleton pages in place

--- a/app/views/v3/user-add-capita.html
+++ b/app/views/v3/user-add-capita.html
@@ -51,6 +51,8 @@
                     classes: "govuk-!-width-three-quarters"
                 }) }}
 
+                {% include "v3/includes/user-access-rights-capita.html" %}
+
                 {{ govukButton({
                     text: "Continue"
                 }) }}
