--- a/app/views/v3/user-add-health-assessment.html
+++ b/app/views/v3/user-add-health-assessment.html
@@ -22,6 +22,36 @@
                     }
                 })}}
 
+                {{ govukSelect({
+                    id: "user-organisation",
+                    name: "user-organisation",
+                    label: {
+                        text: "Organisation"
+                    },
+                    items: [
+                        {
+                            value: "",
+                            text: "None"
+                        },
+                        {
+                            value: "Capita",
+                            text: "Capita"
+                        },
+                        {
+                            value: "G3S",
+                            text: "G3S"
+                        },
+                        {
+                            value: "Other Org",
+                            text: "Other Org"
+                        },
+                        {
+                            value: "Someone Else",
+                            text: "Someone Else"
+                        }
+                    ]
+                }) }}
+
                 {{ govukInput({
                     label: {
                         text: "Name"
@@ -50,6 +80,8 @@
                     type: "tel",
                     classes: "govuk-!-width-three-quarters"
                 }) }}
+
+                {% include "v3/includes/user-access-rights-health-assesment.html" %}
 
                 {{ govukButton({
                     text: "Continue"
