access rights on user summary

--- a/app/views/v3/user-summary-capita.html
+++ b/app/views/v3/user-summary-capita.html
@@ -34,6 +34,23 @@
                         }
                     ]
                 }
+            },
+            {
+                key: {
+                    text: "Permissions"
+                },
+                value: {
+                    html: data["user-access-rights"]
+                },
+                actions: {
+                    items: [
+                        {
+                            href: "user-edit-3",
+                            text: "Change",
+                            visuallyHiddenText: "permissions"
+                        }
+                    ]
+                }
             }
         ]
         }) }}
