Update V3 to match latest sketches

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -72,7 +72,7 @@
 
             <a href="/v3/dashboard-root" class="govuk-button">View as Super admin</a>
             <a href="/v3/dashboard-service-health-assessment" class="govuk-button">View as Service admin</a>
-            <a href="/v3/dashboard-organisation-capita" class="govuk-button">View as Organisation admin</a>
+            <a href="/v3/user-list-capita" class="govuk-button">View as Organisation admin</a>
 
             <h3 class="govuk-heading-m">Confidence level</h3>
 
