--- a/app/views/v3/includes/user-access-rights.html
+++ b/app/views/v3/includes/user-access-rights.html
@@ -25,12 +25,12 @@
       checked: checked("['user-access-rights']", "Service Admin")
     },
     {
-      value: "Partner Organisation Admin",
-      text: "Partner Organisation Admin",
+      value: "Organisation Admin",
+      text: "Organisation Admin",
       hint: {
         html: "Admin for a set of users who do not work for DWP, such as a supplier or local authority<br>Invite users who don’t work for DWP to their service"
       },
-      checked: checked("['operator-admin-access-rights']", "Partner Organisation Admin")
+      checked: checked("['operator-admin-access-rights']", "Organisation Admin")
     },
     {
       value: "User",
