--- a/app/views/v3/organisation-add.html
+++ b/app/views/v3/organisation-add.html
@@ -13,7 +13,7 @@
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <form action="organisation-summary" method="post" class="form">
+            <form action="organisation-confirmation" method="post" class="form">
                 {{ govukFieldset({
                     legend: {
                     text: "Add a partner organisation",
