--- a/app/views/v3/user-confirmation-capita.html
+++ b/app/views/v3/user-confirmation-capita.html
@@ -17,10 +17,10 @@
         titleText: data["user-full-name"] + " created"
       }) }}
 
-      <p>An invitation has been sent.</p>
+      <p>An invitation has been sent to {{data['user-email-address']}}</p>
 
-      <!--<a href="user-list" class="govuk-link">View all users</a><br>
-      <a href="user-add" class="govuk-link">Add another user</a><br>-->
+      <a href="user-list" class="govuk-link">View all users</a><br>
+      <a href="user-add" class="govuk-link">Add another user</a><br>
       <a href="dashboard-organisation-capita" class="govuk-link">Go to the dashboard</a>
     </div>
   </div>
