--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -277,3 +277,14 @@ a.pagination__link:focus {
   }
 }
 
+.govuk-tag--l4 {
+    background-color: govuk-colour('pink');
+}
+
+.govuk-tag--l3 {
+    background-color: govuk-colour('orange');
+}
+
+.govuk-tag--l2 {
+    background-color:  govuk-colour('turquoise');
+}
