--- a/app/views/v3/organisation-confirmation-health-assessment.html
+++ b/app/views/v3/organisation-confirmation-health-assessment.html
@@ -14,13 +14,13 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     {{ govukPanel({
-      titleText: data["organisation-name"] + " partner organisation created"
+      titleText: data["organisation-name"] + " organisation created"
     }) }}
 
-    <p>An invitation has been sent to xxxx@xxxx.xxxx</p>
+    <p>An invitation has been sent to {{data['organisation-admin-email-address']}}</p>
 
-    <!--<a href="organisation-list" class="govuk-link">View all partner organisations</a><br>
-    <a href="organisation-add" class="govuk-link">Add another partner organisation</a><br>-->
+    <a href="organisation-list" class="govuk-link">View all partner organisations</a><br>
+    <a href="organisation-add" class="govuk-link">Add another partner organisation</a><br>
     <a href="dashboard-service-health-assessment" class="govuk-link">Go to the dashboard</a>
   </div>
 </div>
