--- a/app/views/v3/service-confirmation.html
+++ b/app/views/v3/service-confirmation.html
@@ -17,10 +17,10 @@
       titleText: data["service-name"] + " service created"
     }) }}
 
-    <p>An invitation has been sent to xxxx@xxxx.xxxx</p>
+    <p>An invitation has been sent to {{data['service-admin-email-address']}}</p>
 
-    <!--<a href="service-list" class="govuk-link">View all services</a><br>
-    <a href="service-add" class="govuk-link">Add another service</a><br>-->
+    <a href="service-list" class="govuk-link">View all services</a><br>
+    <a href="service-add" class="govuk-link">Add another service</a><br>
     <a href="dashboard-root" class="govuk-link">Go to the dashboard</a>
   </div>
 </div>
