--- a/app/views/v3/user-add-health-assessment.html
+++ b/app/views/v3/user-add-health-assessment.html
@@ -7,13 +7,13 @@
 {% block header %}
     {{ super() }}
 
-    {% include "v3/includes/nav-service.html" %}
+    {% include "v3/includes/nav.html" %}
 {% endblock %}
 
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <form action="user-summary-health-assessment" method="post" class="form">
+            <form action="user-add-type" method="post" class="form">
                 {{ govukFieldset({
                     legend: {
                         html: '<span class="govuk-caption-l">Add a new user</span>User details',
@@ -22,66 +22,7 @@
                     }
                 })}}
 
-                {{ govukSelect({
-                    id: "user-organisation",
-                    name: "user-organisation",
-                    label: {
-                        text: "Organisation"
-                    },
-                    items: [
-                        {
-                            value: "",
-                            text: "None"
-                        },
-                        {
-                            value: "Capita",
-                            text: "Capita"
-                        },
-                        {
-                            value: "G3S",
-                            text: "G3S"
-                        },
-                        {
-                            value: "Other Org",
-                            text: "Other Org"
-                        },
-                        {
-                            value: "Someone Else",
-                            text: "Someone Else"
-                        }
-                    ]
-                }) }}
-
-                {{ govukInput({
-                    label: {
-                        text: "Name"
-                    },
-                    id: "user-full-name",
-                    name: "user-full-name",
-                    classes: "govuk-!-width-three-quarters"
-                }) }}
-
-                {{ govukInput({
-                    label: {
-                        text: "Email address"
-                    },
-                    id: "user-email-address",
-                    name: "user-email-address",
-                    type: "email",
-                    classes: "govuk-!-width-three-quarters"
-                }) }}
-
-                {{ govukInput({
-                    label: {
-                        text: "Phone number"
-                    },
-                    id: "user-phone-number",
-                    name: "user-phone-number",
-                    type: "tel",
-                    classes: "govuk-!-width-three-quarters"
-                }) }}
-
-                {% include "v3/includes/user-access-rights-health-assesment.html" %}
+                {% include "v3/includes/user-access-rights-health-assessment.html" %}
 
                 {{ govukButton({
                     text: "Continue"
