--- a/app/views/v3/user-add-service.html
+++ b/app/views/v3/user-add-service.html
@@ -13,14 +13,44 @@
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <form action="user-confirmation-capita" method="post" class="form">
+            <form action="user-confirmation-health-assessment" method="post" class="form">
                 {{ govukFieldset({
                     legend: {
-                        html: '<span class="govuk-caption-l">Add a new user</span>User details',
+                        html: '<span class="govuk-caption-l">Add a new service admin</span>Service admin details',
                         classes: "govuk-fieldset__legend--l",
                         isPageHeading: true
                     }
                 })}}
+
+                {{ govukSelect({
+                    id: "user-service",
+                    name: "user-service",
+                    label: {
+                        text: "Service"
+                    },
+                    items: [
+                        {
+                            value: "",
+                            text: "None"
+                        },
+                        {
+                            value: "Health Assessments",
+                            text: "Health Assessments"
+                        },
+                        {
+                            value: "PRAP",
+                            text: "PRAP"
+                        },
+                        {
+                            value: "Blue Badge",
+                            text: "Blue Badge"
+                        },
+                        {
+                            value: "Something Else",
+                            text: "Something Else"
+                        }
+                    ]
+                }) }}
 
                 {{ govukInput({
                     label: {
@@ -50,8 +80,6 @@
                     type: "tel",
                     classes: "govuk-!-width-three-quarters"
                 }) }}
-
-                {% include "v3/includes/user-access-rights-capita.html" %}
 
                 {{ govukButton({
                     text: "Continue"
