--- a/app/views/v3/user-list-2.html
+++ b/app/views/v3/user-list-2.html
@@ -18,51 +18,46 @@
   <table class="govuk-table">
     <thead class="govuk-table__head">
       <tr class="govuk-table__row">
-
         <th scope="col" class="govuk-table__header">Name</th>
-
-        <th scope="col" class="govuk-table__header">Email address</th>
-
         <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Organisation</th>
-
+        <th scope="col" class="govuk-table__header">User level</th>
         <th scope="col" class="govuk-table__header">Status</th>
-
       </tr>
     </thead>
 
     <tbody class="govuk-table__body">
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Jane Smith</a></th>
-        <td class="govuk-table__cell"><a href="mailto:jane.smith@company.gov.uk" class="govuk-link">jane.smith@company.gov.uk</a></td>
         <td class="govuk-table__cell">Capita</td>
+        <td class="govuk-table__cell">L1 User</td>
         <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Joan Smith</a></th>
-        <td class="govuk-table__cell"><a href="mailto:joan.smith@company.gov.uk" class="govuk-link">joan.smith@company.gov.uk</a></td>
         <td class="govuk-table__cell">G3S</td>
+        <td class="govuk-table__cell">L1 User</td>
         <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">James Smith</a></th>
-        <td class="govuk-table__cell"><a href="mailto:james.smith@company.gov.uk" class="govuk-link">james.smith@company.gov.uk</a></td>
         <td class="govuk-table__cell">Capita</td>
+        <td class="govuk-table__cell">L1 User</td>
         <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Joe Smith</a></th>
-        <td class="govuk-table__cell"><a href="mailto:joe.smith@company.gov.uk" class="govuk-link">joe.smith@company.gov.uk</a></td>
         <td class="govuk-table__cell">Capita</td>
+        <td class="govuk-table__cell">L1 User</td>
         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--inactive">Inactive</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Jack Smith</a></th>
-        <td class="govuk-table__cell"><a href="mailto:jack.smith@company.gov.uk" class="govuk-link">jack.smith@company.gov.uk</a></td>
         <td class="govuk-table__cell">Capita</td>
+        <td class="govuk-table__cell">L1 User</td>
         <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
       </tr>
     </tbody>
