--- a/app/views/v3/user-list-health-assessment.html
+++ b/app/views/v3/user-list-health-assessment.html
@@ -19,8 +19,8 @@
     <thead class="govuk-table__head">
       <tr class="govuk-table__row">
         <th scope="col" class="govuk-table__header">Name</th>
-        <th scope="col" class="govuk-table__header">Email address</th>
         <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Organisation</th>
+        <th scope="col" class="govuk-table__header">User level</th>
         <th scope="col" class="govuk-table__header">Status</th>
       </tr>
     </thead>
@@ -29,72 +29,82 @@
       {% if data['user-full-name'] %}
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">{{ data['user-full-name'] }}</a></th>
-        <td class="govuk-table__cell"><a href="mailto:{{ data['user-email-address'] }}" class="govuk-link">{{ data['user-email-address'] }}</a></td>
         <td class="govuk-table__cell">-</td>
+        <td class="govuk-table__cell">
+            {% if data['user-access-rights'] == 'Super Admin' %}
+                <span class="govuk-tag govuk-tag--l4">L4</span> Super admin
+            {% elif data['user-access-rights'] == 'Service Admin' %}
+                <span class="govuk-tag govuk-tag--l3">L3</span> Service admin
+            {% elif data['user-access-rights'] == 'Organisation Admin' %}
+                <span class="govuk-tag govuk-tag--l2">L2</span> Organisation admin
+            {% else %}
+                L1 User
+            {% endif %}
+        </td>
         <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
       </tr>
       {% endif %}
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Gary Speed</a></th>
-        <td class="govuk-table__cell"><a href="mailto:gary.speed@company.gov.uk" class="govuk-link">gary.speed@company.gov.uk</a></td>
         <td class="govuk-table__cell">Capita</td>
+        <td class="govuk-table__cell">L1 User</td>
         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--inactive">Suspended</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Gordon Strachan</a></th>
-        <td class="govuk-table__cell"><a href="mailto:gordon.strachan@company.gov.uk" class="govuk-link">gordon.strachan@company.gov.uk</a></td>
         <td class="govuk-table__cell">G3S</td>
+        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--l4">L4</span> Super admin</td>
         <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Gary McAllister</a></th>
-        <td class="govuk-table__cell"><a href="mailto:gary.mcallister@company.gov.uk" class="govuk-link">gary.mcallister@company.gov.uk</a></td>
         <td class="govuk-table__cell">Capita</td>
+        <td class="govuk-table__cell">L1 User</td>
         <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Tony Dorigo</a></th>
-        <td class="govuk-table__cell"><a href="mailto:tony.dorigo@company.gov.uk" class="govuk-link">tony.dorigo@company.gov.uk</a></td>
         <td class="govuk-table__cell">Capita</td>
+        <td class="govuk-table__cell">L1 User</td>
         <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Mel Sterland</a></th>
-        <td class="govuk-table__cell"><a href="mailto:mel.sterland@company.gov.uk" class="govuk-link">mel.sterland@company.gov.uk</a></td>
         <td class="govuk-table__cell">Capita</td>
+        <td class="govuk-table__cell">L1 User</td>
         <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">John Doe</a></th>
-        <td class="govuk-table__cell"><a href="mailto:john.doe@company.gov.uk" class="govuk-link">john.doe@company.gov.uk</a></td>
         <td class="govuk-table__cell">Capita</td>
+        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--l3">L3</span> Service admin</td>
         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--inactive">Suspended</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Jackson Smith</a></th>
-        <td class="govuk-table__cell"><a href="mailto:jackson.smith@company.gov.uk" class="govuk-link">jackson.smith@company.gov.uk</a></td>
         <td class="govuk-table__cell">Capita</td>
+        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--l2">L2</span> Organisation admin</td>
         <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Jessie Smith</a></th>
-        <td class="govuk-table__cell"><a href="mailto:jessie.smith@company.gov.uk" class="govuk-link">jessie.smith@company.gov.uk</a></td>
         <td class="govuk-table__cell">Capita</td>
+        <td class="govuk-table__cell">L1 User</td>
         <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">John Smith</a></th>
-        <td class="govuk-table__cell"><a href="mailto:john.smith@company.gov.uk" class="govuk-link">john.smith@company.gov.uk</a></td>
         <td class="govuk-table__cell">Capita</td>
+        <td class="govuk-table__cell">L1 User</td>
         <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
       </tr>
     </tbody>
