--- a/app/views/v3/user-list.html
+++ b/app/views/v3/user-list.html
@@ -11,129 +11,134 @@
 {% endblock %}
 
 {% block content %}
-  <h1 class="govuk-heading-l listing-page">Users</h1>
+    <h1 class="govuk-heading-l listing-page">Users</h1>
 
-  <a href="/v3/user-add" class="govuk-button listing-page">Add new user</a>
+    <a href="/v3/user-add" class="govuk-button listing-page">Add new user</a>
 
-  <table class="govuk-table">
-    <thead class="govuk-table__head">
-      <tr class="govuk-table__row">
+    <table class="govuk-table">
+        <thead class="govuk-table__head">
+            <tr class="govuk-table__row">
+                <th scope="col" class="govuk-table__header">Name</th>
+                <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Organisation</th>
+                <th scope="col" class="govuk-table__header">Level</th>
+                <th scope="col" class="govuk-table__header">Status</th>
+            </tr>
+        </thead>
 
-        <th scope="col" class="govuk-table__header">Name</th>
+        <tbody class="govuk-table__body">
+            {% if data['user-full-name'] %}
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">{{ data['user-full-name'] }}</a></th>
+                    <td class="govuk-table__cell">{{ data['user-organisation'] }}</td>
+                    <td class="govuk-table__cell">
+                        {% if data['user-access-rights'] == 'Super Admin' %}
+                            <span class="govuk-tag govuk-tag--l4">L4</span> Super admin
+                        {% elif data['user-access-rights'] == 'Service Admin' %}
+                            <span class="govuk-tag govuk-tag--l3">L3</span> Service admin
+                        {% elif data['user-access-rights'] == 'Organisation Admin' %}
+                            <span class="govuk-tag govuk-tag--l2">L2</span> Organisation admin
+                        {% else %}
+                            L1 User
+                        {% endif %}
+                    </td>
+                    <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+                </tr>
+            {% endif %}
 
-        <th scope="col" class="govuk-table__header">Email address</th>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Gary Speed</a></th>
+                <td class="govuk-table__cell">Capita</td>
+                <td class="govuk-table__cell">L1 User</td>
+                <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--inactive">Suspended</span></td>
+            </tr>
 
-        <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Organisation</th>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Gordon Strachan</a></th>
+                <td class="govuk-table__cell">G3S</td>
+                <td class="govuk-table__cell">L1 User</td>
+                <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+            </tr>
 
-        <th scope="col" class="govuk-table__header">Status</th>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Gary McAllister</a></th>
+                <td class="govuk-table__cell">Capita</td>
+                <td class="govuk-table__cell">L1 User</td>
+                <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+            </tr>
 
-      </tr>
-    </thead>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Tony Dorigo</a></th>
+                <td class="govuk-table__cell">Capita</td>
+                <td class="govuk-table__cell">L1 User</td>
+                <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+            </tr>
 
-    <tbody class="govuk-table__body">
-      {% if data['user-full-name'] %}
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">{{ data['user-full-name'] }}</a></th>
-        <td class="govuk-table__cell"><a href="mailto:{{ data['user-email-address'] }}" class="govuk-link">{{ data['user-email-address'] }}</a></td>
-        <td class="govuk-table__cell">-</td>
-        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
-      </tr>
-      {% endif %}
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Mel Sterland</a></th>
+                <td class="govuk-table__cell">Capita</td>
+                <td class="govuk-table__cell">L1 User</td>
+                <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+            </tr>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Gary Speed</a></th>
-        <td class="govuk-table__cell"><a href="mailto:gary.speed@company.gov.uk" class="govuk-link">gary.speed@company.gov.uk</a></td>
-        <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--inactive">Suspended</span></td>
-      </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">John Doe</a></th>
+                <td class="govuk-table__cell">Capita</td>
+                <td class="govuk-table__cell">L1 User</td>
+                <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--inactive">Suspended</span></td>
+            </tr>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Gordon Strachan</a></th>
-        <td class="govuk-table__cell"><a href="mailto:gordon.strachan@company.gov.uk" class="govuk-link">gordon.strachan@company.gov.uk</a></td>
-        <td class="govuk-table__cell">G3S</td>
-        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
-      </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Jackson Smith</a></th>
+                <td class="govuk-table__cell">Capita</td>
+                <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--l3">L3</span> Service admin</td>
+                <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+            </tr>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Gary McAllister</a></th>
-        <td class="govuk-table__cell"><a href="mailto:gary.mcallister@company.gov.uk" class="govuk-link">gary.mcallister@company.gov.uk</a></td>
-        <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
-      </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Jessie Smith</a></th>
+                <td class="govuk-table__cell">Capita</td>
+                <td class="govuk-table__cell">L1 User</td>
+                <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+            </tr>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Tony Dorigo</a></th>
-        <td class="govuk-table__cell"><a href="mailto:tony.dorigo@company.gov.uk" class="govuk-link">tony.dorigo@company.gov.uk</a></td>
-        <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
-      </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">John Smith</a></th>
+                <td class="govuk-table__cell">Capita</td>
+                <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--l4">L4</span> Super admin</td>
+                <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+            </tr>
+        </tbody>
+    </table>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Mel Sterland</a></th>
-        <td class="govuk-table__cell"><a href="mailto:mel.sterland@company.gov.uk" class="govuk-link">mel.sterland@company.gov.uk</a></td>
-        <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
-      </tr>
+    <nav role="navigation" aria-label="Pagination">
+        <div class="pagination__summary">
+            Showing 1 &ndash; 10 of 15 results
+        </div>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">John Doe</a></th>
-        <td class="govuk-table__cell"><a href="mailto:john.doe@company.gov.uk" class="govuk-link">john.doe@company.gov.uk</a></td>
-        <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--inactive">Suspended</span></td>
-      </tr>
+        <ul class="pagination">
+            <li class="pagination__item">
+                <span class="pagination__link disabled" aria-label="Previous page">
+                    <span aria-hidden="true" role="presentation">&laquo;</span> Previous
+                </span>
+            </li>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Jackson Smith</a></th>
-        <td class="govuk-table__cell"><a href="mailto:jackson.smith@company.gov.uk" class="govuk-link">jackson.smith@company.gov.uk</a></td>
-        <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
-      </tr>
+            <li class="pagination__item">
+                <span class="pagination__link current" aria-label="Page 1">1</span>
+            </li>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Jessie Smith</a></th>
-        <td class="govuk-table__cell"><a href="mailto:jessie.smith@company.gov.uk" class="govuk-link">jessie.smith@company.gov.uk</a></td>
-        <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
-      </tr>
+            <li class="pagination__item">
+                <a class="pagination__link" href="/v3/user-list-2" aria-label="Page 2">2</a>
+            </li>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">John Smith</a></th>
-        <td class="govuk-table__cell"><a href="mailto:john.smith@company.gov.uk" class="govuk-link">john.smith@company.gov.uk</a></td>
-        <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
-      </tr>
-    </tbody>
-  </table>
+            <li class="pagination__item">
+                <a class="pagination__link" href="/v3/user-list-2" aria-label="Next page">
+                    Next <span aria-hidden="true" role="presentation">&raquo;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 
-  <nav role="navigation" aria-label="Pagination">
-    <div class="pagination__summary">
-      Showing 1 &ndash; 10 of 15 results
-    </div>
-
-    <ul class="pagination">
-      <li class="pagination__item">
-        <span class="pagination__link disabled" aria-label="Previous page">
-          <span aria-hidden="true" role="presentation">&laquo;</span> Previous
-        </span>
-      </li>
-
-      <li class="pagination__item">
-        <span class="pagination__link current" aria-label="Page 1">1</span>
-      </li>
-
-      <li class="pagination__item">
-        <a class="pagination__link" href="/v3/user-list-2" aria-label="Page 2">2</a>
-      </li>
-
-      <li class="pagination__item">
-        <a class="pagination__link" href="/v3/user-list-2" aria-label="Next page">
-          Next <span aria-hidden="true" role="presentation">&raquo;</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
-
-  <p class="govuk-!-margin-top-9">
-    <a href="/v3/dashboard-root" class="govuk-link">Back to dashboard</a>
-  </p>
+    <p class="govuk-!-margin-top-9">
+        <a href="/v3/dashboard-root" class="govuk-link">Back to dashboard</a>
+    </p>
 {% endblock %}
