--- a/app/views/v3/user-view.html
+++ b/app/views/v3/user-view.html
@@ -11,46 +11,112 @@
 {% endblock %}
 
 {% block content %}
-  <h1 class="govuk-heading-l">{{ data['user-first-name'] }} {{ data['user-last-name'] }}</h1>
+    <h1 class="govuk-heading-l">
+        <span class="govuk-caption-l">Capita</span>User details
+    </h1>
 
-  {{ govukSummaryList({
-    rows: [
-      {
-        key: {
-          text: "Name"
-        },
-        value: {
-          text: data['user-full-name']
-        }
-      },
-      {
-        key: {
-          text: "Email address"
-        },
-        value: {
-          text: data['user-email-address']
-        }
-      },
-      {
-        key: {
-          text: "Access rights"
-        },
-        value: {
-          text: data['user-access-rights']
-        }
-      },
-      {
-        key: {
-          text: "Status"
-        },
-        value: {
-          html: '<span class="govuk-tag govuk-tag">Active</span>'
-        }
-      }
-    ]
-  }) }}
+    {{ govukSummaryList({
+        rows: [
+            {
+                key: {
+                    text: "Name"
+                },
+                value: {
+                    text: data['user-full-name']
+                },
+                actions: {
+                    items: [
+                        {
+                            href: "user-edit",
+                            text: "Change",
+                            visuallyHiddenText: "name"
+                        }
+                    ]
+                }
+            },
+            {
+                key: {
+                    text: "Email address"
+                },
+                value: {
+                    text: data['user-email-address']
+                },
+                actions: {
+                    items: [
+                        {
+                            href: "user-edit",
+                            text: "Change",
+                            visuallyHiddenText: "email address"
+                        }
+                    ]
+                }
+            },
+            {
+                key: {
+                    text: "Phone number"
+                },
+                value: {
+                    text: data['user-phone-number']
+                },
+                actions: {
+                    items: [
+                        {
+                            href: "user-edit",
+                            text: "Change",
+                            visuallyHiddenText: "phone number"
+                        }
+                    ]
+                }
+            },
+            {
+                key: {
+                    text: "Access rights"
+                },
+                value: {
+                    text: data['user-access-rights']
+                },
+                actions: {
+                    items: [
+                        {
+                            href: "user-edit",
+                            text: "Change",
+                            visuallyHiddenText: "permissions"
+                        }
+                    ]
+                }
+            },
+            {
+                key: {
+                    text: "Status"
+                },
+                value: {
+                    html: '<span class="govuk-tag govuk-tag">Active</span>'
+                }
+            },
+            {
+                key: {
+                    text: "Last logged in"
+                },
+                value: {
+                    html: '21 October 2019'
+                }
+            },
+            {
+                key: {
+                    text: "Created"
+                },
+                value: {
+                    html: '9 April 1982, 7:52pm'
+                }
+            }
+        ]
+    }) }}
 
-  <a href="user-edit" class="govuk-button">Edit user</a>
-  <a href="#" class="govuk-button govuk-button--secondary">Re-send invite</a>
-  <a href="user-confirmation--delete" class="govuk-button govuk-button--warning">Delete user</a>
+    <a href="#" class="govuk-button">Re-send invite</a>
+    <a href="#" class="govuk-button govuk-button--secondary">Suspend user</a>
+    <a href="#" class="govuk-button govuk-button--warning">Delete user</a>
+
+    <p class="govuk-!-margin-top-9">
+        <a href="user-list-capita" class="govuk-link">Back users list</a>
+    </p>
 {% endblock %}
