README changes on index view

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -54,10 +54,16 @@
                     Remove Service Groups
                 </li>
                 <li>
-                    Remove access rights pages from 'Add service' and 'Add organisation'
+                    Add new 'Add user' journey with permissions first
                 </li>
                 <li>
-                    Revert access rights style on 'Add user' and 'Edit user' to previous
+                    Example pagination on User List pages
+                </li>
+                <li>
+                    Update individual user view pages
+                </li>
+                <li>
+                    Organisation admin users no longer land on a dashboard page, they go directly to the users list
                 </li>
                 <li>
                     Create 'Health Assessment' service admin journey pages
