Add some more confidence rows

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -123,8 +123,8 @@
                     </tr>
 
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v3/dashboard-organisation-capita">Organisation admin dashbaord</a></td>
-                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
+                        <td class="govuk-table__cell"><a href="/v3/user-list-capita">Organisation user list landing</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">low</span></td>
                     </tr>
 
                     <tr class="govuk-table__row">
@@ -138,7 +138,22 @@
                     </tr>
 
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v3/user-add">Add a new user</a></td>
+                        <td class="govuk-table__cell"><a href="/v3/user-add">Add a new user (as a super admin)</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">low</span></td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v3/user-add-health-assessment">Add a new user (as a service admin)</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">low</span></td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v3/user-add-capita">Add a new user (as an organisation admin)</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">low</span></td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v3/user-view">View a user (as an organisation admin)</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">low</span></td>
                     </tr>
 
